# WirelessBoot

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
bootloader_components/my_boot_hooks/: hooks.c
main/: CMakeLists.txt  esp_user_log_redirection.c  esp_user_log_redirection.h  file_server.c  file_server.h  firmware_update.html  key_data.c  key_data.h  lorawan_license.html  main.c  ota_by_sockets.c  ota_by_sockets.h  user_mdns.c  user_mdns.h  wifi_ap_sta.c  wifi_ap_sta.h  wifi_conf.html  wifi_conf_server.c  wifi_conf_server.h
